--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("bg_1004.jpg");
+	background-image: url("bg_1004.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: #FFFFFF
@@ -14,6 +14,15 @@ body {
 	margin-top: 30px;
 	margin-left: 15px;
 }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+	
+
 	
 .nav-custom { 
 	color: black;
@@ -44,6 +53,10 @@ h1 {
 	color: #ffffff;
 }
 
+h5 {
+color: #000000;
+}
+
 
 .no-gutters {
   margin-right: 0;
@@ -63,9 +76,17 @@ a:hover{
 }
 
 .teksti {
-	color: #ffffff;
-	font-size: 25px;
+	color: #000000;
+	font-size: 35px;
 	align-content: center;
+	text-shadow: 1px 1px 4px white;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", "serif";
+}
+
+.bannerimage {
+	display: block;
+	border: 1px solid white;
+	box-shadow: 6px 6px 30px #000000;
 }
 
 .front-image {
@@ -77,14 +98,30 @@ a:hover{
 }
 
 
+@media screen and (min-width: 601px) {
+.banner .gallerytext {
+    font-size: 35px;
+	  font-family: Cambria, "Hoefler Text", "Liberation Serif", "serif";
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+.banner .gallerytext {
+    font-size: 15px;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", "serif";
+  }
+}
+
 .crmark {
 	height: 50px;
-  	position: fixed;
+  	position: absolute;
   	right: 0;
   	bottom: 0;
   	left: 0;
-  	z-index: 1030;
+  	
 	width: 100%;
 	color: #FFFFFF;
 	opacity: 0.5;
 }
+
